[package]
name = "rsntp"
version = "0.0.1"
edition = "2021"
authors = ["Miroslav Lichvar <mlichvar0@gmail.com>"]
description = "Multi-threaded NTP server"
license = "GPLv2+"

[dependencies]
byteorder = "1.5.0"
getopts = "0.2.21"
socket2 = { version = "0.5", features = ["all"] }
privdrop = "0.5.4"
rand = "0.8"

[profile.release]
lto = true
strip = true
